# Copyright 2016 Cheng Zhao. All rights reserved.
# Use of this source code is governed by the MIT license that can be
# found in the LICENSE file.

# This file is used by the gn meta-buildsystem find the root of the source tree
# and to set startup options.

# Use preset Chromium build configurations.
use_chromium_config = true

# The secondary source root is a parallel directory tree where
# GN build files are placed when they can not be placed directly
# in the source tree, e.g. for third party source trees.
secondary_source = "//building/secondary/"
