# Copyright 2016 Cheng Zhao. All rights reserved.
# Use of this source code is governed by the MIT license that can be
# found in the LICENSE file.

group("default") {
  deps = [
    "//node_yue",
    "//lua_yue:yue",
  ]

  if (!is_component_build) {
    deps += [ "//nativeui:libyue" ]
  }
  if (!is_win) {
    deps += [ "//lua_yue:lua_yue" ]
  }
}
