# Copyright 2016 Cheng Zhao. All rights reserved.
# Use of this source code is governed by the MIT license that can be
# found in the LICENSE file.

group("default") {
  deps = [
    "//node_yue",
    "//lua_yue",
    "//lua_yue:yue_runtime",
    "//sample_app",
  ]

  if (!is_component_build) {
    deps += [ "//nativeui:libyue" ]
  }
}
