# Copyright 2016 Cheng Zhao. All rights reserved.
# Use of this source code is governed by the MIT license that can be
# found in the LICENSE file.

group("default") {
  deps = [
    "//lua_yue",
    "//node_yue",
    "//sample_app",
  ]

  if (is_win && (target_cpu == "arm" || target_cpu == "arm64")) {
    deps -= ["//node_yue"]
  }
}
