# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# Variable that can be used to support multiple build scenarios, like having
# Chromium specific targets in a client project's GN file etc.
build_with_chromium = true

# Some non-Chromium builds don't support building java targets.
enable_java_templates = true

# Some non-Chromium builds don't use Chromium's third_party/binutils.
linux_use_bundled_binutils_override = false

# Android 32-bit non-component, non-clang builds cannot have symbol_level=2
# due to 4GiB file size limit, see https://crbug.com/648948.
# Set this flag to true to skip the assertion.
ignore_elf32_limitations = false

# Use the system install of Xcode for tools like ibtool, libtool, etc.
# This does not affect the compiler. When this variable is false, targets will
# instead use a hermetic install of Xcode. [The hermetic install can be
# obtained with gclient sync after setting the environment variable
# FORCE_MAC_TOOLCHAIN].
use_system_xcode = true
