# Copyright 2016 Cheng Zhao. All rights reserved.
# Use of this source code is governed by the license that can be found in the
# LICENSE file.

import("//testing/test.gni")

source_set("lua") {
  sources = [
    "lua.h",
    "call_context.h",
    "callback.cc",
    "callback.h",
    "callback_internal.h",
    "handle.cc",
    "handle.h",
    "index.cc",
    "index.h",
    "inline.h",
    "metatable.cc",
    "metatable.h",
    "metatable_internal.h",
    "pcall.h",
    "stack.h",
    "stack_auto_reset.h",
    "state.h",
    "table.h",
    "table_internal.h",
    "types.h",
    "user_data.h",
    "util.h",
  ]

  if (is_win) {
    cflags = [
      "/wd4189",  # local variable is initialized but not referenced
    ]
  }

  deps = [
    "//base",
  ]
}

test("lua_unittests") {
  sources = [
    "handle_unittest.cc",
    "index_unittest.cc",
    "lua_unittest.cc",
    "metatable_unittest.cc",
    "test/run_all_unittests.cc",
  ]

  deps = [
    ":lua",
    "//testing/gtest",
    "//third_party/lua",
  ]
}
