# Copyright 2016 Cheng Zhao. All rights reserved.
# Use of this source code is governed by the license that can be found in the
# LICENSE file.

import("//testing/test.gni")

source_set("lua") {
  sources = [
    "lua.h",
    "call_context.h",
    "callback.h",
    "callback_internal.h",
    "handle.cc",
    "handle.h",
    "index.h",
    "metatable.cc",
    "metatable.h",
    "metatable_internal.h",
    "pcall.h",
    "ref_method.cc",
    "ref_method.h",
    "stack.h",
    "stack_auto_reset.h",
    "state.h",
    "table.cc",
    "table.h",
    "table_internal.h",
    "types.h",
    "user_data.h",
    "util.h",
  ]

  if (is_win) {
    cflags = [
      "/wd4189",  # local variable is initialized but not referenced
    ]
  }

  if (is_linux) {
    # Not sure why it is not added in base.
    libs = [ "atomic" ]
  }

  deps = [
    "//base",
  ]
}

test("lua_unittests") {
  sources = [
    "callback_unittest.cc",
    "ref_method_unittest.cc",
    "handle_unittest.cc",
    "index_unittest.cc",
    "lua_unittest.cc",
    "metatable_unittest.cc",
    "test/run_all_unittests.cc",
  ]

  deps = [
    ":lua",
    "//base",
    "//testing/gtest",
    "//third_party/lua",
  ]
}
