# Copyright 2016 Cheng Zhao. All rights reserved.
# Use of this source code is governed by the MIT license that can be
# found in the LICENSE file.

import("//testing/test.gni")

executable("myapp") {
  sources = [
    "myapp.cc",
  ]

  deps = [
    "//base",
    "//build/win:default_exe_manifest",
  ]

  # Build as GUI program.
  # if (is_win) {
  #   configs -= [ "//build/config/win:console" ]
  #   configs += [ "//build/config/win:windowed" ]
  # }
}

test("myapp_unittests") {
  sources = [
    "myapp_unittests.cc",
    "test/run_all_unittests.cc",
  ]

  deps = [
    ":myapp",
    "//base/test:test_support",
    "//testing/gtest",
  ]
}
