# Copyright 2016 Cheng Zhao. All rights reserved.
# Use of this source code is governed by the license that can be found in the
# LICENSE file.

import("//testing/test.gni")

source_set("nativeui") {
  sources = [
    "nativeui.h",
    "nativeui_export.h",
    "app.cc",
    "app.h",
    "button.cc",
    "button.h",
    "container.cc",
    "container.h",
    "group.cc",
    "group.h",
    "entry.cc",
    "entry.h",
    "label.cc",
    "label.h",
    "menu_base.cc",
    "menu_base.h",
    "menu_bar.h",
    "menu_item.cc",
    "menu_item.h",
    "menu.h",
    "progress.cc",
    "progress.h",
    "scroll.cc",
    "scroll.h",
    "signal.h",
    "state.cc",
    "state.h",
    "types.h",
    "view.cc",
    "view.h",
    "window.cc",
    "window.h",
    "gfx/color.cc",
    "gfx/color.h",
    "gfx/font.cc",
    "gfx/font.h",
    "gfx/painter.cc",
    "gfx/painter.h",
    "gfx/platform_font.h",
    "gfx/text.h",
    "gfx/gtk/color_gtk.cc",
    "gfx/gtk/platform_font_gtk.cc",
    "gfx/gtk/platform_font_gtk.h",
    "gfx/mac/color_mac.mm",
    "gfx/mac/coordinate_conversion.mm",
    "gfx/mac/coordinate_conversion.h",
    "gfx/mac/painter_mac.h",
    "gfx/mac/painter_mac.mm",
    "gfx/mac/platform_font_mac.mm",
    "gfx/mac/platform_font_mac.h",
    "gfx/mac/text_mac.mm",
    "gfx/win/color_win.cc",
    "gfx/win/double_buffer.h",
    "gfx/win/painter_win.cc",
    "gfx/win/painter_win.h",
    "gfx/win/platform_font_win.cc",
    "gfx/win/platform_font_win.h",
    "gfx/win/scoped_set_map_mode.h",
    "gfx/win/text_win.cc",
    "gfx/win/gdiplus.h",
    "gfx/geometry/insets.cc",
    "gfx/geometry/insets.h",
    "gfx/geometry/insets_f.cc",
    "gfx/geometry/insets_f.h",
    "gfx/geometry/point.cc",
    "gfx/geometry/point.h",
    "gfx/geometry/point_conversions.cc",
    "gfx/geometry/point_conversions.h",
    "gfx/geometry/point_f.cc",
    "gfx/geometry/point_f.h",
    "gfx/geometry/rect.cc",
    "gfx/geometry/rect.h",
    "gfx/geometry/rect_conversions.cc",
    "gfx/geometry/rect_conversions.h",
    "gfx/geometry/rect_f.cc",
    "gfx/geometry/rect_f.h",
    "gfx/geometry/safe_integer_conversions.h",
    "gfx/geometry/size.cc",
    "gfx/geometry/size.h",
    "gfx/geometry/size_conversions.cc",
    "gfx/geometry/size_conversions.h",
    "gfx/geometry/size_f.cc",
    "gfx/geometry/size_f.h",
    "gfx/geometry/vector2d.cc",
    "gfx/geometry/vector2d.h",
    "gfx/geometry/vector2d_conversions.cc",
    "gfx/geometry/vector2d_conversions.h",
    "gfx/geometry/vector2d_f.cc",
    "gfx/geometry/vector2d_f.h",
    "util/css.cc",
    "util/css.h",
    "gtk/gtk_event_loop.cc",
    "gtk/gtk_event_loop.h",
    "gtk/container_container.cc",
    "gtk/container_container.h",
    "gtk/widget_util.cc",
    "gtk/widget_util.h",
    "gtk/app_gtk.cc",
    "gtk/button_gtk.cc",
    "gtk/container_gtk.cc",
    "gtk/entry_gtk.cc",
    "gtk/group_gtk.cc",
    "gtk/label_gtk.cc",
    "gtk/menu_gtk.cc",
    "gtk/menu_base_gtk.cc",
    "gtk/menu_bar_gtk.cc",
    "gtk/menu_item_gtk.cc",
    "gtk/progress_gtk.cc",
    "gtk/scroll_gtk.cc",
    "gtk/state_gtk.cc",
    "gtk/view_gtk.cc",
    "gtk/window_gtk.cc",
    "mac/nu_application_delegate.h",
    "mac/nu_application_delegate.mm",
    "mac/app_mac.mm",
    "mac/button_mac.mm",
    "mac/container_mac.mm",
    "mac/entry_mac.mm",
    "mac/group_mac.mm",
    "mac/label_mac.mm",
    "mac/menu_mac.mm",
    "mac/menu_base_mac.mm",
    "mac/menu_bar_mac.mm",
    "mac/menu_item_mac.mm",
    "mac/progress_mac.mm",
    "mac/scroll_mac.mm",
    "mac/state_mac.mm",
    "mac/view_mac.mm",
    "mac/view_mac.h",
    "mac/window_mac.mm",
    "win/base_view.cc",
    "win/base_view.h",
    "win/focus_manager.cc",
    "win/focus_manager.h",
    "win/subwin_holder.cc",
    "win/subwin_holder.h",
    "win/subwin_view.cc",
    "win/subwin_view.h",
    "win/window_impl.cc",
    "win/window_impl.h",
    "win/button_win.cc",
    "win/container_win.cc",
    "win/container_win.h",
    "win/entry_win.cc",
    "win/group_win.cc",
    "win/label_win.cc",
    "win/menu_win.cc",
    "win/menu_base_win.cc",
    "win/menu_base_win.h",
    "win/menu_bar_win.cc",
    "win/menu_item_win.cc",
    "win/menu_item_win.h",
    "win/progress_win.cc",
    "win/view_win.cc",
    "win/screen.cc",
    "win/screen.h",
    "win/scroll_win.cc",
    "win/scroll_win.h",
    "win/state_win.cc",
    "win/window_win.cc",
    "win/window_win.h",
    "win/scroll_bar/repeat_controller.cc",
    "win/scroll_bar/repeat_controller.h",
    "win/scroll_bar/scroll_bar.cc",
    "win/scroll_bar/scroll_bar.h",
    "win/scroll_bar/scroll_bar_button.cc",
    "win/scroll_bar/scroll_bar_button.h",
    "win/scroll_bar/scroll_bar_thumb.cc",
    "win/scroll_bar/scroll_bar_thumb.h",
    "win/util/class_registrar.cc",
    "win/util/class_registrar.h",
    "win/util/native_theme.cc",
    "win/util/native_theme.h",
    "win/util/hwnd_util.cc",
    "win/util/hwnd_util.h",
    "win/util/msg_util.h",
  ]

  deps = [
    "//base",
    "//third_party/css-layout:csslayout",
  ]

  if (is_linux) {
    public_configs = [ "//build/config/linux/gtk3" ]

    # Do not warn on using deprecated GTK APIs.
    cflags_cc = [ "-Wno-deprecated-declarations" ]
  } else if (is_win) {
    libs = [
      "gdi32.lib",
      "gdiplus.lib",
    ]
    deps += [
      "//build/win:default_exe_manifest",
    ]
    configs -= [ "//build/config/win:lean_and_mean" ]
  }
}

test("nativeui_unittests") {
  sources = [
    "container_unittest.cc",
    "button_unittest.cc",
    "group_unittest.cc",
    "label_unittest.cc",
    "menu_unittests.cc",
    "menu_item_unittests.cc",
    "view_unittest.cc",
    "window_unittest.cc",
    "test/gfx_util.cc",
    "test/gfx_util.h",
    "test/run_all_unittests.cc",
  ]

  deps = [
    ":nativeui",
    "//base/test:test_support",
    "//testing/gtest",
  ]
}
