# Copyright 2016 Cheng Zhao. All rights reserved.
# Use of this source code is governed by the license that can be found in the
# LICENSE file.

import("//testing/test.gni")

if (!is_component_build) {
  static_library("libyue") {
    complete_static_lib = true
    output_prefix_override = true  # do not add "lib" prefix
    output_dir = root_out_dir

    deps = [ ":nativeui" ]
  }
}

component("nativeui") {
  sources = [
    "nativeui.h",
    "nativeui_export.h",
    "app.cc",
    "app.h",
    "lifetime.cc",
    "lifetime.h",
    "accelerator.cc",
    "accelerator.h",
    "accelerator_manager.h",
    "browser.cc",
    "browser.h",
    "button.cc",
    "button.h",
    "container.cc",
    "container.h",
    "file_dialog.h",
    "file_open_dialog.h",
    "file_save_dialog.h",
    "group.cc",
    "group.h",
    "entry.cc",
    "entry.h",
    "label.cc",
    "label.h",
    "menu_base.cc",
    "menu_base.h",
    "menu_bar.cc",
    "menu_bar.h",
    "menu_item.cc",
    "menu_item.h",
    "menu.cc",
    "menu.h",
    "progress_bar.cc",
    "progress_bar.h",
    "scroll.cc",
    "scroll.h",
    "signal.h",
    "state.cc",
    "state.h",
    "text_edit.cc",
    "text_edit.h",
    "types.h",
    "view.cc",
    "view.h",
    "vibrant.h",
    "window.cc",
    "window.h",
    "util/yoga_util.cc",
    "util/yoga_util.h",
    "events/event.h",
    "events/keyboard_codes.h",
    "events/keyboard_code_conversion.cc",
    "events/keyboard_code_conversion.h",
    "events/gtk/event_gtk.cc",
    "events/gtk/keyboard_codes_gtk.h",
    "events/gtk/keyboard_code_conversion_gtk.cc",
    "events/gtk/keyboard_code_conversion_gtk.h",
    "events/mac/event_mac.mm",
    "events/mac/keyboard_codes_mac.h",
    "events/mac/keyboard_code_conversion_mac.h",
    "events/mac/keyboard_code_conversion_mac.mm",
    "events/win/event_win.cc",
    "events/win/event_win.h",
    "events/win/keyboard_codes_win.h",
    "gfx/canvas.cc",
    "gfx/canvas.h",
    "gfx/color.cc",
    "gfx/color.h",
    "gfx/font.h",
    "gfx/image.cc",
    "gfx/image.h",
    "gfx/painter.cc",
    "gfx/painter.h",
    "gfx/text.cc",
    "gfx/text.h",
    "gfx/screen.h",
    "gfx/gtk/canvas_gtk.cc",
    "gfx/gtk/color_gtk.cc",
    "gfx/gtk/image_gtk.cc",
    "gfx/gtk/painter_gtk.cc",
    "gfx/gtk/painter_gtk.h",
    "gfx/gtk/font_gtk.cc",
    "gfx/gtk/screen_gtk.cc",
    "gfx/mac/canvas_mac.mm",
    "gfx/mac/color_mac.mm",
    "gfx/mac/coordinate_conversion.mm",
    "gfx/mac/coordinate_conversion.h",
    "gfx/mac/image_mac.mm",
    "gfx/mac/font_mac.mm",
    "gfx/mac/painter_mac.h",
    "gfx/mac/painter_mac.mm",
    "gfx/mac/screen_mac.mm",
    "gfx/mac/text_mac.h",
    "gfx/mac/text_mac.mm",
    "gfx/win/canvas_win.cc",
    "gfx/win/color_win.cc",
    "gfx/win/double_buffer.cc",
    "gfx/win/double_buffer.h",
    "gfx/win/font_win.cc",
    "gfx/win/image_win.cc",
    "gfx/win/painter_win.cc",
    "gfx/win/painter_win.h",
    "gfx/win/scoped_set_map_mode.h",
    "gfx/win/screen_win.cc",
    "gfx/win/screen_win.h",
    "gfx/win/text_win.cc",
    "gfx/win/gdiplus.h",
    "gfx/win/native_theme.cc",
    "gfx/win/native_theme.h",
    "gfx/geometry/insets.cc",
    "gfx/geometry/insets.h",
    "gfx/geometry/insets_f.cc",
    "gfx/geometry/insets_f.h",
    "gfx/geometry/point.cc",
    "gfx/geometry/point.h",
    "gfx/geometry/point_conversions.cc",
    "gfx/geometry/point_conversions.h",
    "gfx/geometry/point_f.cc",
    "gfx/geometry/point_f.h",
    "gfx/geometry/rect.cc",
    "gfx/geometry/rect.h",
    "gfx/geometry/rect_conversions.cc",
    "gfx/geometry/rect_conversions.h",
    "gfx/geometry/rect_f.cc",
    "gfx/geometry/rect_f.h",
    "gfx/geometry/safe_integer_conversions.h",
    "gfx/geometry/size.cc",
    "gfx/geometry/size.h",
    "gfx/geometry/size_conversions.cc",
    "gfx/geometry/size_conversions.h",
    "gfx/geometry/size_f.cc",
    "gfx/geometry/size_f.h",
    "gfx/geometry/vector2d.cc",
    "gfx/geometry/vector2d.h",
    "gfx/geometry/vector2d_conversions.cc",
    "gfx/geometry/vector2d_conversions.h",
    "gfx/geometry/vector2d_f.cc",
    "gfx/geometry/vector2d_f.h",
    "gtk/nu_container.cc",
    "gtk/nu_container.h",
    "gtk/nu_image.cc",
    "gtk/nu_image.h",
    "gtk/undoable_text_buffer.cc",
    "gtk/undoable_text_buffer.h",
    "gtk/widget_util.cc",
    "gtk/widget_util.h",
    "gtk/app_gtk.cc",
    "gtk/lifetime_gtk.cc",
    "gtk/accelerator_manager_gtk.cc",
    "gtk/browser_gtk.cc",
    "gtk/button_gtk.cc",
    "gtk/container_gtk.cc",
    "gtk/entry_gtk.cc",
    "gtk/file_dialog_gtk.cc",
    "gtk/file_open_dialog_gtk.cc",
    "gtk/file_save_dialog_gtk.cc",
    "gtk/group_gtk.cc",
    "gtk/label_gtk.cc",
    "gtk/menu_gtk.cc",
    "gtk/menu_base_gtk.cc",
    "gtk/menu_bar_gtk.cc",
    "gtk/menu_item_gtk.cc",
    "gtk/progress_bar_gtk.cc",
    "gtk/scroll_gtk.cc",
    "gtk/state_gtk.cc",
    "gtk/text_edit_gtk.cc",
    "gtk/view_gtk.cc",
    "gtk/window_gtk.cc",
    "mac/events_handler.h",
    "mac/events_handler.mm",
    "mac/mouse_capture.h",
    "mac/mouse_capture.mm",
    "mac/nu_application_delegate.h",
    "mac/nu_application_delegate.mm",
    "mac/nu_private.h",
    "mac/nu_private.mm",
    "mac/nu_view.h",
    "mac/nu_view.mm",
    "mac/nu_window.h",
    "mac/nu_window.mm",
    "mac/app_mac.mm",
    "mac/lifetime_mac.mm",
    "mac/accelerator_manager_mac.mm",
    "mac/browser_mac.mm",
    "mac/button_mac.mm",
    "mac/container_mac.h",
    "mac/container_mac.mm",
    "mac/entry_mac.mm",
    "mac/file_dialog_mac.mm",
    "mac/file_open_dialog_mac.mm",
    "mac/file_save_dialog_mac.mm",
    "mac/group_mac.mm",
    "mac/label_mac.mm",
    "mac/menu_mac.mm",
    "mac/menu_base_mac.mm",
    "mac/menu_bar_mac.mm",
    "mac/menu_item_mac.mm",
    "mac/progress_bar_mac.mm",
    "mac/scroll_mac.mm",
    "mac/state_mac.mm",
    "mac/text_edit_mac.mm",
    "mac/vibrant_mac.mm",
    "mac/view_mac.mm",
    "mac/window_mac.mm",
    "win/edit_view.cc",
    "win/edit_view.h",
    "win/focus_manager.cc",
    "win/focus_manager.h",
    "win/subwin_view.cc",
    "win/subwin_view.h",
    "win/clickable.cc",
    "win/clickable.h",
    "win/app_win.cc",
    "win/lifetime_win.cc",
    "win/accelerator_manager_win.cc",
    "win/browser_win.cc",
    "win/button_win.cc",
    "win/container_win.cc",
    "win/container_win.h",
    "win/entry_win.cc",
    "win/file_dialog_win.cc",
    "win/file_dialog_win.h",
    "win/file_open_dialog_win.cc",
    "win/file_open_dialog_win.h",
    "win/file_save_dialog_win.cc",
    "win/file_save_dialog_win.h",
    "win/group_win.cc",
    "win/label_win.cc",
    "win/menu_win.cc",
    "win/menu_base_win.cc",
    "win/menu_base_win.h",
    "win/menu_bar_win.cc",
    "win/menu_item_win.cc",
    "win/menu_item_win.h",
    "win/progress_bar_win.cc",
    "win/scroll_win.cc",
    "win/scroll_win.h",
    "win/state_win.cc",
    "win/text_edit_win.cc",
    "win/view_win.cc",
    "win/view_win.h",
    "win/window_win.cc",
    "win/window_win.h",
    "win/scrollbar/repeat_controller.cc",
    "win/scrollbar/repeat_controller.h",
    "win/scrollbar/scrollbar.cc",
    "win/scrollbar/scrollbar.h",
    "win/scrollbar/scrollbar_button.cc",
    "win/scrollbar/scrollbar_button.h",
    "win/scrollbar/scrollbar_thumb.cc",
    "win/scrollbar/scrollbar_thumb.h",
    "win/util/class_registrar.cc",
    "win/util/class_registrar.h",
    "win/util/gdiplus_holder.h",
    "win/util/hwnd_util.cc",
    "win/util/hwnd_util.h",
    "win/util/msg_util.h",
    "win/util/subwin_holder.cc",
    "win/util/subwin_holder.h",
    "win/util/win32_window.cc",
    "win/util/win32_window.h",
  ]

  deps = [
    "//base",
    "//third_party/yoga",
  ]

  defines = [ "NATIVEUI_IMPLEMENTATION" ]

  if (is_linux) {
    public_configs = [
      "//build/config/linux:x11",
      "//build/config/linux/gtk3",
      ":webkitgtk",
    ]

    # Do not warn on using deprecated GTK APIs.
    cflags_cc = [ "-Wno-deprecated-declarations" ]
  } else if (is_mac) {
    libs = [
      "AppKit.framework",
      "WebKit.framework",
    ]
  } else if (is_win) {
    libs = [
      "comctl32.lib",
      "dwmapi.lib",
      "gdi32.lib",
      "gdiplus.lib",
    ]
    ldflags = [
      "/DELAYLOAD:dwmapi.dll",
    ]
    deps += [
      "//build/win:default_exe_manifest",
    ]
    configs -= [ "//build/config/win:lean_and_mean" ]
  }
}

test("nativeui_unittests") {
  sources = [
    "container_unittest.cc",
    "button_unittest.cc",
    "group_unittest.cc",
    "label_unittest.cc",
    "menu_unittests.cc",
    "menu_item_unittests.cc",
    "text_edit_unittests.cc",
    "view_unittest.cc",
    "window_unittest.cc",
    "test/gfx_util.cc",
    "test/gfx_util.h",
    "test/run_all_unittests.cc",
  ]

  deps = [
    ":nativeui",
    "//base",
    "//testing/gtest",
  ]
}

if (is_linux) {
  import("//build/config/linux/pkg_config.gni")

  pkg_config("webkitgtk") {
    packages = [ "webkit2gtk-4.0" ]
  }
}
